Added player class

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ CC = g++
 
 COMPILER_FLAGS = -g
 
-DEPS = game.cpp window.cpp pong.cpp texture.cpp
+DEPS = game.cpp window.cpp pong.cpp texture.cpp player.cpp
 
 LINKER_FLAGS = -lSDL2 -lSDL2_image
 
