Added ball class

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ CC = g++
 
 COMPILER_FLAGS = -g
 
-DEPS = game.cpp window.cpp pong.cpp texture.cpp player.cpp
+DEPS = game.cpp window.cpp pong.cpp texture.cpp player.cpp ball.cpp support.cpp
 
 LINKER_FLAGS = -lSDL2 -lSDL2_image
 
@@ -12,4 +12,4 @@ pong : ${DEPS}
 	${CC} ${COMPILER_FLAGS} ${DEPS} ${LINKER_FLAGS} -o ${OUTPUT}
 
 clean:
-	rm -f \.*.o
+	rm -f *.o
